[mull-cxx] Load dynamic libraries from the executable

--- a/tools/driver-cxx/CMakeLists.txt
+++ b/tools/driver-cxx/CMakeLists.txt
@@ -1,9 +1,10 @@
 set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/driver-cxx.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/DynamicLibraries.cpp
 )
 
 add_mull_executable(
   NAME mull-cxx
   SOURCES ${SOURCES}
-  LINK_WITH ebc mull
+  LINK_WITH ebc mull LLVMObject
 )
