--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ env:
 - LLVM_VERSION=7.0
 
 before_install:
-- echo $PLAYBOOK
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then HOMEBREW_NO_AUTO_UPDATE=1 brew install ansible; fi
+- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then sudo easy_install pip && sudo pip install ansible; fi
 - if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then sudo pip install ansible; fi
 - if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update; fi
 
