--- a/infrastructure/helpers/integration-tests.yaml
+++ b/infrastructure/helpers/integration-tests.yaml
@@ -35,6 +35,8 @@
       - Ninja
       - -DCMAKE_CXX_FLAGS=-fembed-bitcode -nostdinc++ -isystem {{ llvm_dir }}/include/c++/v1 -isystem {{ llvm_dir }}/lib/clang/{{ llvm_version }}/include
       - -DCMAKE_EXE_LINKER_FLAGS=-lc++ -L {{ llvm_dir }}/lib
+      - -DCMAKE_BUILD_TYPE=Debug
+      - -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
       - "{{ working_dir }}/integration/fmt"
     chdir: "{{ working_dir }}/integration/fmt.build.dir"
     creates: "{{ working_dir }}/integration/fmt.build.dir/CMakeCache.txt"
@@ -60,10 +62,13 @@
     argv:
       - mull-cxx
       - -test-framework=GoogleTest
+      - -mutators=math_add_mutator
       - -ld_search_path=/usr/local/lib
       - -ld_search_path=/lib/x86_64-linux-gnu
       - -ld_search_path=/usr/lib/x86_64-linux-gnu
       - -ld_search_path={{ llvm_dir }}/lib
+      - -compilation-flags=-isystem {{ llvm_dir }}/include/c++/v1 -isystem {{ llvm_dir }}/lib/clang/{{ llvm_version }}/include
+      - -compdb-path={{ working_dir }}/integration/fmt.build.dir/compile_commands.json
       - "{{ working_dir }}/integration/fmt.build.dir/bin/core-test"
   environment:
     LD_LIBRARY_PATH: "{{ llvm_dir }}/lib"
