--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 - LLVM_VERSION=5.0
 - LLVM_VERSION=6.0
 - LLVM_VERSION=7.0
+- LLVM_VERSION=8.0
 
 before_install:
 - if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then sudo easy_install pip && sudo pip install ansible; fi
