[mull-cxx] Introduce IDEReporter
Closes #439.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -88,7 +88,7 @@ set(mull_sources
   JunkDetection/CXX/Visitors/NegateConditionVisitor.cpp
   JunkDetection/CXX/ASTStorage.cpp
   JunkDetection/CXX/CompilationDatabase.cpp
-)
+  Reporters/IDEReporter.cpp)
 
 set (MULL_INCLUDE_DIR ${MULL_SOURCE_DIR}/include)
 
