Rename the tests target: those are not the only unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,4 +189,4 @@ add_subdirectory(LLVMCompatibility/${LLVM_COMPATIBILITY_DIR})
 add_subdirectory(lib)
 add_subdirectory(googletest)
 add_subdirectory(tools)
-add_subdirectory(unittests)
+add_subdirectory(tests)
