--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -41,26 +41,21 @@ set(mull_unittests_sources
 
 get_filename_component(factory_include_dir ${FACTORY_HEADER} DIRECTORY)
 
-add_executable(MullUnitTests EXCLUDE_FROM_ALL ${mull_unittests_sources})
-target_link_libraries(MullUnitTests
+add_executable(mull-tests EXCLUDE_FROM_ALL ${mull_unittests_sources})
+target_link_libraries(mull-tests
   mull
   google-test
 )
-target_include_directories(MullUnitTests PUBLIC
+target_include_directories(mull-tests PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${MULL_SOURCE_DIR}/googletest/include
   ${MULL_INCLUDE_DIRS}
   ${factory_include_dir}
 )
-set_target_properties(MullUnitTests PROPERTIES
+set_target_properties(mull-tests PROPERTIES
   COMPILE_FLAGS ${MULL_CXX_FLAGS}
   LINK_FLAGS ${MULL_LINK_FLAGS}
 )
 get_property(dependencies GLOBAL PROPERTY TEST_FIXTURES_DEPENDENCIES)
-add_dependencies(MullUnitTests ${dependencies})
-
-# This copies (symlinks) fixtures/*.bc files that used by unit tests.
-add_custom_command(TARGET MullUnitTests POST_BUILD
-                   COMMAND ${CMAKE_COMMAND} -E create_symlink
-                   ${CMAKE_CURRENT_LIST_DIR}/fixtures $<TARGET_FILE_DIR:MullUnitTests>/fixtures)
+add_dependencies(mull-tests ${dependencies})
 
