Move google test to vendor
Closes #441

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,6 +187,6 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 add_subdirectory(lab)
 add_subdirectory(LLVMCompatibility/${LLVM_COMPATIBILITY_DIR})
 add_subdirectory(lib)
-add_subdirectory(googletest)
+add_subdirectory(vendor/googletest)
 add_subdirectory(tools)
 add_subdirectory(tests)
