--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -48,7 +48,7 @@ target_link_libraries(mull-tests
 )
 target_include_directories(mull-tests PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
-  ${MULL_SOURCE_DIR}/googletest/include
+  ${MULL_SOURCE_DIR}/vendor/googletest/include
   ${MULL_INCLUDE_DIRS}
   ${factory_include_dir}
 )
