--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -69,5 +69,6 @@ llvm_path: "{{ llvm_mapping[platform][llvm_version].path }}"
 llvm_dir: "{{ working_dir }}/llvm-{{ llvm_version }}"
 
 source_dir: "{{ working_dir }}/mull"
-build_dir: "{{ working_dir }}/build.mull.dir"
+debug_build_dir: "{{ working_dir }}/build.mull.debug.dir"
+release_build_dir: "{{ working_dir }}/build.mull.release.dir"
 
