mull-cxx: support linking to single shared libLLVM
Like other modules do it.

--- a/tools/driver-cxx/CMakeLists.txt
+++ b/tools/driver-cxx/CMakeLists.txt
@@ -3,8 +3,18 @@ set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/DynamicLibraries.cpp
 )
 
+if ("LLVM" IN_LIST LLVM_AVAILABLE_LIBS)
+  set (MULL_CXX_LLVM_LIBRARIES
+    LLVM
+  )
+else()
+  set (MULL_CXX_LLVM_LIBRARIES
+    LLVMObject
+  )
+endif()
+
 add_mull_executable(
   NAME mull-cxx
   SOURCES ${SOURCES}
-  LINK_WITH ebc mull LLVMObject
+  LINK_WITH ebc mull ${MULL_CXX_LLVM_LIBRARIES}
 )
