--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -54,5 +54,26 @@ Vagrant.configure(2) do |config|
     end
   end
 
+  config.vm.define "freebsd" do |cfg|
+    cfg.vm.box = "freebsd/FreeBSD-11.2-STABLE"
+    cfg.vm.box_version = "2019.04.18"
+    cfg.ssh.insert_key = false
+    cfg.vm.base_mac = "080027D14C66"
+    cfg.ssh.shell = "sh"
+    cfg.vm.synced_folder ".", "/vagrant", disabled: true
+
+    cfg.vm.provision "shell", inline: "pkg install -y python"
+
+    cfg.vm.provision "ansible" do |ansible|
+      ansible.verbose = "v"
+      ansible.playbook = "freebsd-playbook.yaml"
+      ansible.extra_vars = {
+        llvm_version: ENV['LLVM_VERSION'] || '8.0.0',
+        ansible_python_interpreter: '/usr/local/bin/python',
+        make_program: 'gmake'
+      }
+    end
+  end
+
 end
 
