--- a/infrastructure/debian-playbook.yaml
+++ b/infrastructure/debian-playbook.yaml
@@ -7,6 +7,9 @@
 
     mull_cxx_flags: -D_GLIBCXX_USE_CXX11_ABI=0
 
+    package_extensions:
+      - deb
+
     packages:
       - fish
       - vim
