--- a/tests/fixtures/mutators/math_div/CMakeLists.txt
+++ b/tests/fixtures/mutators/math_div/CMakeLists.txt
@@ -3,4 +3,8 @@ compile_fixture(
   OUTPUT_EXTENSION bc
   FLAGS -g -c -emit-llvm
 )
-
+compile_fixture(
+  INPUT ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
+  OUTPUT_EXTENSION bc
+  FLAGS -g -c -emit-llvm
+)
