--- a/tests/fixtures/mutators/replace_call/CMakeLists.txt
+++ b/tests/fixtures/mutators/replace_call/CMakeLists.txt
@@ -4,3 +4,8 @@ compile_fixture(
   FLAGS -g -c -emit-llvm
 )
 
+compile_fixture(
+  INPUT ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
+  OUTPUT_EXTENSION bc
+  FLAGS -g -c -emit-llvm
+)
