Reporting JSON to Mutation Testing Elements

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -55,6 +55,7 @@ set(mull_sources
 
   JunkDetection/CXX/CXXJunkDetector.cpp
 
+  Reporters/ASTSourceInfoProvider.cpp
   Reporters/SourceManager.cpp
   Reporters/SQLiteReporter.cpp
   Reporters/TimeReporter.cpp
@@ -78,20 +79,24 @@ set(mull_sources
   TestFrameworks/TestFrameworkFactory.cpp
   Program/Program.cpp
   ObjectLoader.cpp
+  JunkDetection/CXX/Visitors/AndOrReplacementVisitor.cpp
   JunkDetection/CXX/Visitors/InstructionRangeVisitor.cpp
   JunkDetection/CXX/Visitors/ConditionalsBoundaryVisitor.cpp
   JunkDetection/CXX/Visitors/MathAddVisitor.cpp
+  JunkDetection/CXX/Visitors/MathDivVisitor.cpp
+  JunkDetection/CXX/Visitors/MathMulVisitor.cpp
   JunkDetection/CXX/Visitors/MathSubVisitor.cpp
-  JunkDetection/CXX/Visitors/RemoveVoidFunctionVisitor.cpp
   JunkDetection/CXX/Visitors/NegateConditionVisitor.cpp
+  JunkDetection/CXX/Visitors/RemoveVoidFunctionVisitor.cpp
+  JunkDetection/CXX/Visitors/ReplaceCallVisitor.cpp
   JunkDetection/CXX/ASTStorage.cpp
   JunkDetection/CXX/CompilationDatabase.cpp
+
   Reporters/IDEReporter.cpp
+  Reporters/MutationTestingElementsReporter.cpp
+  Reporters/SourceManager.cpp
+
   TestFrameworks/NativeTestRunner.cpp
-  JunkDetection/CXX/Visitors/AndOrReplacementVisitor.cpp
-  JunkDetection/CXX/Visitors/MathMulVisitor.cpp
-  JunkDetection/CXX/Visitors/MathDivVisitor.cpp
-  JunkDetection/CXX/Visitors/ReplaceCallVisitor.cpp
 )
 
 set (MULL_INCLUDE_DIR ${MULL_SOURCE_DIR}/include/mull)
@@ -157,7 +162,7 @@ target_link_libraries(mull
   clangTooling
   Threads::Threads
 )
-target_include_directories(mull PUBLIC ${MULL_INCLUDE_DIRS})
+target_include_directories(mull PUBLIC ${MULL_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/vendor)
 
 set_target_properties(mull PROPERTIES
   COMPILE_FLAGS ${MULL_CXX_FLAGS}
