--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -34,6 +34,7 @@ set(mull_sources
   Toolchain/Resolvers/InstrumentationResolver.cpp
   Toolchain/Resolvers/MutationResolver.cpp
   Toolchain/Trampolines.cpp
+  Toolchain/CXXRuntimeOverrides.cpp
 
   MullModule.cpp
   MutationPoint.cpp
