--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -98,7 +98,8 @@ set(mull_sources
 
   TestFrameworks/NativeTestRunner.cpp
 
-  MutationFilters/JunkMutationFilter.cpp)
+  MutationFilters/JunkMutationFilter.cpp
+  MutationFilters/NoDebugInfoFilter.cpp)
 
 set(MULL_INCLUDE_DIR ${MULL_SOURCE_DIR}/include/mull)
 
