--- a/tests/fixtures/CMakeLists.txt
+++ b/tests/fixtures/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(mutators)
 add_subdirectory(simple_test)
 add_subdirectory(hardcode)
 add_subdirectory(exceptions)
+add_subdirectory(mutation_filters)
