Junk Detection for the scalar value mutator
This is an initial implementation, it does not cover all the cases, but
should be a good start.

Closes #484.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -101,7 +101,7 @@ set(mull_sources
   MutationFilters/JunkMutationFilter.cpp
   MutationFilters/NoDebugInfoFilter.cpp
   MutationFilters/FilePathFilter.cpp
-  )
+  JunkDetection/CXX/Visitors/ScalarValueVisitor.cpp)
 
 set(MULL_INCLUDE_DIR ${MULL_SOURCE_DIR}/include/mull)
 
