Junk Detection for ReplaceAssignment mutator
It is important to understand that the Replace Assignment covers only
the following case:

```
int x = 0;  // <-- ignored
x = 31;     // <-- mutated
```

The line `int x = 0` is equivalent to the `int x(0)` which is in fact
a declaration, and not an assignment.

Fixes #482.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -89,6 +89,7 @@ set(mull_sources
   JunkDetection/CXX/Visitors/NegateConditionVisitor.cpp
   JunkDetection/CXX/Visitors/RemoveVoidFunctionVisitor.cpp
   JunkDetection/CXX/Visitors/ReplaceCallVisitor.cpp
+  JunkDetection/CXX/Visitors/ReplaceAssignmentVisitor.cpp
   JunkDetection/CXX/ASTStorage.cpp
   JunkDetection/CXX/CompilationDatabase.cpp
 
