Add RemToDiv mutator

--- a/tests/fixtures/mutators/CMakeLists.txt
+++ b/tests/fixtures/mutators/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(math_mul)
 add_subdirectory(math_sub)
 add_subdirectory(negate_condition)
 add_subdirectory(remove_void_function)
+add_subdirectory(rem_to_div)
 add_subdirectory(replace_assignment)
 add_subdirectory(replace_call)
 add_subdirectory(scalar_value)
