--- a/lib/Mutators/CXX/CMakeLists.txt
+++ b/lib/Mutators/CXX/CMakeLists.txt
@@ -3,6 +3,7 @@ set (SOURCES
   BitwiseMutators.cpp
   RelationalMutators.cpp
   TrivialCXXMutator.cpp
+  NumberMutators.cpp
   )
 
 add_library(mull-cxx-mutators ${SOURCES})
