--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,9 @@ add_subdirectory(fixtures)
 generate_fixture_factory(FACTORY_HEADER)
 
 set(mull_unittests_sources
+  AST/ASTVisitor_BinaryOperators_Tests.cpp
+  AST/ASTVisitor_Scalars_Tests.cpp
+
   CompilerTests.cpp
   ConfigParserTests.cpp
   DriverTests.cpp
