Split includes into Mull's own and into third-party

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,14 +157,17 @@ endif()
 add_subdirectory(vendor)
 
 set (MULL_DEFINITIONS ${LLVM_DEFINITIONS})
-set (MULL_INCLUDE_DIRS
-  ${MULL_SOURCE_DIR}/include
+set (THIRD_PARTY_INCLUDE_DIRS
   ${LLVM_INCLUDE_DIRS}
-  ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${LLVM_COMPATIBILITY_DIR}
   ${SQLITE3_INCLUDE_DIRS}
   ${SQLITE3_INCLUDEDIR}
   ${CMAKE_CURRENT_LIST_DIR}/vendor/LibEBC/lib/include
   ${CMAKE_CURRENT_LIST_DIR}/vendor/libirm/include
+  ${CMAKE_SOURCE_DIR}/vendor
+)
+set (MULL_INCLUDE_DIRS
+  ${MULL_SOURCE_DIR}/include
+  ${CMAKE_CURRENT_LIST_DIR}/LLVMCompatibility/${LLVM_COMPATIBILITY_DIR}
 )
 
 if ("LLVM" IN_LIST LLVM_AVAILABLE_LIBS)
