ASTVisitor: remove void calls

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ generate_fixture_factory(FACTORY_HEADER)
 
 set(mull_unittests_sources
   AST/ASTVisitor_BinaryOperators_Tests.cpp
+  AST/ASTVisitor_RemoveVoidCall_Tests.cpp
   AST/ASTVisitor_Scalars_Tests.cpp
 
   CompilerTests.cpp
