WIP: ASTVisitor: AND-OR...

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(fixtures)
 generate_fixture_factory(FACTORY_HEADER)
 
 set(mull_unittests_sources
+  AST/ANDOR/ASTVisitor_AND_OR_Tests.cpp
   AST/BinaryOperators/ASTVisitor_BinaryOperators_Arithmetics_Tests.cpp
   AST/BinaryOperators/ASTVisitor_BinaryOperators_Relational_Tests.cpp
   AST/ASTVisitor_RemoveVoidCall_Tests.cpp
