--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ set(mull_unittests_sources
   AST/ANDOR/ASTVisitor_AND_OR_Tests.cpp
   AST/ASTVisitor_Negate_Tests.cpp
   AST/ASTVisitor_RemoveVoidCall_Tests.cpp
+  AST/ASTVisitor_ReplaceCall_Tests.cpp
   AST/ASTVisitor_Scalars_Tests.cpp
   AST/BinaryOperators/ASTVisitor_BinaryOperators_Arithmetics_Tests.cpp
   AST/BinaryOperators/ASTVisitor_BinaryOperators_Relational_Tests.cpp
