--- a/Examples/HelloWorld/Makefile
+++ b/Examples/HelloWorld/Makefile
@@ -8,9 +8,13 @@ GTEST_HEADER_SEARCH_FLAGS=-I$(GTEST_DIR) -I$(GTEST_DIR)/include
 
 # -pthread is needed for GoogleTest.
 PTHREADS:=""
+SYSROOT:=""
 UNAME_S := $(shell uname -s)
 ifneq ($(UNAME_S),Darwin)
     PTHREADS += -pthread
+endif
+ifeq ($(UNAME_S),Darwin)
+    SYSROOT += --sysroot=$(shell xcrun -show-sdk-path)
 endif
 
 $(BUILD_DIR):
@@ -25,15 +29,15 @@ run_cxx: prepare_cxx
 	mull-cxx -test-framework=GoogleTest $(BUILD_DIR)/HelloWorldTests
 
 prepare_driver: $(BUILD_DIR) config
-	$(CXX) -emit-llvm -c \
+	$(CXX) $(SYSROOT) -emit-llvm -c \
     -g -O0 $(GTEST_HEADER_SEARCH_FLAGS) \
     HelloWorld.cpp \
     -o $(BUILD_DIR)/HelloWorld.bc
-	$(CXX) -emit-llvm -c \
+	$(CXX) $(SYSROOT) -emit-llvm -c \
     -g -O0 $(GTEST_HEADER_SEARCH_FLAGS) \
     $(GTEST_DIR)/src/gtest-all.cc \
     -o $(BUILD_DIR)/gtest-all.bc
-	$(CXX) -emit-llvm -c \
+	$(CXX) $(SYSROOT) -emit-llvm -c \
     -g -O0 $(GTEST_HEADER_SEARCH_FLAGS) \
     $(GTEST_DIR)/src/gtest_main.cc \
     -o $(BUILD_DIR)/gtest-main.bc
@@ -45,7 +49,7 @@ config:
 	echo "bitcode_file_list: $(BUILD_DIR)/bitcodelist" > $(BUILD_DIR)/config.yml
 
 prepare_cxx: $(BUILD_DIR)
-	$(CXX) \
+	$(CXX) $(SYSROOT) \
     -g -O0 -fembed-bitcode $(GTEST_HEADER_SEARCH_FLAGS) $(PTHREADS) \
     HelloWorld.cpp $(GTEST_DIR)/src/gtest-all.cc $(GTEST_DIR)/src/gtest_main.cc \
     -o $(BUILD_DIR)/HelloWorldTests
