Drop old driver

--- a/Examples/HelloWorld/Makefile
+++ b/Examples/HelloWorld/Makefile
@@ -20,33 +20,10 @@ endif
 $(BUILD_DIR):
 	mkdir -p $(BUILD_DIR)
 
-.PHONY: config prepare_driver
-
-run_driver: prepare_driver
-	mull-driver $(BUILD_DIR)/config.yml
+.PHONY: config
 
 run_cxx: prepare_cxx
 	mull-cxx -test-framework=GoogleTest $(BUILD_DIR)/HelloWorldTests
-
-prepare_driver: $(BUILD_DIR) config
-	$(CXX) $(SYSROOT) -emit-llvm -c \
-    -g -O0 $(GTEST_HEADER_SEARCH_FLAGS) \
-    HelloWorld.cpp \
-    -o $(BUILD_DIR)/HelloWorld.bc
-	$(CXX) $(SYSROOT) -emit-llvm -c \
-    -g -O0 $(GTEST_HEADER_SEARCH_FLAGS) \
-    $(GTEST_DIR)/src/gtest-all.cc \
-    -o $(BUILD_DIR)/gtest-all.bc
-	$(CXX) $(SYSROOT) -emit-llvm -c \
-    -g -O0 $(GTEST_HEADER_SEARCH_FLAGS) \
-    $(GTEST_DIR)/src/gtest_main.cc \
-    -o $(BUILD_DIR)/gtest-main.bc
-
-config:
-	echo $(BUILD_DIR)/HelloWorld.bc > $(BUILD_DIR)/bitcodelist
-	echo $(BUILD_DIR)/gtest-all.bc >> $(BUILD_DIR)/bitcodelist
-	echo $(BUILD_DIR)/gtest-main.bc >> $(BUILD_DIR)/bitcodelist
-	echo "bitcode_file_list: $(BUILD_DIR)/bitcodelist" > $(BUILD_DIR)/config.yml
 
 prepare_cxx: $(BUILD_DIR)
 	$(CXX) $(SYSROOT) \
